app/native_binding/lib/native_binding_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

/// Bindings for `src/native_binding.h`.
///
/// Regenerate bindings with `flutter pub run ffigen --config ffigen.yaml`.
///
class NativeBindingBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NativeBindingBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NativeBindingBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// #endif
  void init() {
    return _init();
  }

  late final _initPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('init');
  late final _init = _initPtr.asFunction<void Function()>();

  void setup_pipeline() {
    return _setup_pipeline();
  }

  late final _setup_pipelinePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('setup_pipeline');
  late final _setup_pipeline = _setup_pipelinePtr.asFunction<void Function()>();

  void start_pipeline() {
    return _start_pipeline();
  }

  late final _start_pipelinePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('start_pipeline');
  late final _start_pipeline = _start_pipelinePtr.asFunction<void Function()>();

  void free_resource() {
    return _free_resource();
  }

  late final _free_resourcePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('free_resource');
  late final _free_resource = _free_resourcePtr.asFunction<void Function()>();

  void set_video_surface(
    ffi.Pointer<ffi.Int> env,
    int surface,
  ) {
    return _set_video_surface(
      env,
      surface,
    );
  }

  late final _set_video_surfacePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Int>, ffi.Int)>>(
      'set_video_surface');
  late final _set_video_surface = _set_video_surfacePtr
      .asFunction<void Function(ffi.Pointer<ffi.Int>, int)>();

  /// A very short-lived native function.
  ///
  /// For very short-lived functions, it is fine to call them on the main isolate.
  /// They will block the Dart execution while running the native function, so
  /// only do this for native functions which are guaranteed to be short-lived.
  int sum(
    int a,
    int b,
  ) {
    return _sum(
      a,
      b,
    );
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.IntPtr, ffi.IntPtr)>>(
          'sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// A longer lived native function, which occupies the thread calling it.
  ///
  /// Do not call these kind of native functions in the main isolate. They will
  /// block Dart execution. This will cause dropped frames in Flutter applications.
  /// Instead, call these native functions on a separate isolate.
  int sum_long_running(
    int a,
    int b,
  ) {
    return _sum_long_running(
      a,
      b,
    );
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.IntPtr Function(ffi.IntPtr, ffi.IntPtr)>>(
          'sum_long_running');
  late final _sum_long_running =
      _sum_long_runningPtr.asFunction<int Function(int, int)>();
}
